--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "is-autocomplete",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "directories": {
     "test": "test"
   },
@@ -22,12 +22,11 @@
   },
   "homepage": "https://github.com/GSG-G9/IS-Autocomplete#readme",
   "devDependencies": {
+    "env2": "^2.2.2",
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
     "nodemon": "^2.0.6"
   },
-  "dependencies": {
-    "env2": "^2.2.2"
-  }
+  "dependencies": {}
 }
