--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "eslint": "^7.13.0",
     "eslint-config-airbnb-base": "^14.2.1",
     "eslint-plugin-import": "^2.22.1",
+    "jest": "^26.6.3",
     "nodemon": "^2.0.6"
   },
   "dependencies": {}
